<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.zhuanfa.money.getmoney.activity.SuggestActivity">

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/action_bar_background">

        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/back_btn_width"
                android:layout_height="@dimen/back_btn_height"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/back_btn_padding"
                android:background="@drawable/navigationbar_btn_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/suggest_title"
            android:textColor="@color/action_title"
            android:textSize="@dimen/title_size" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/my_suggest" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/suggest_edt_height"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/suggest_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/my_suggest_hint"
            android:padding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/my_qq" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qq_edt_height"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/qq_number_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/my_qq_hint"
            android:maxLength="15"
            android:padding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <Button
        android:id="@+id/commit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/round_button"
        android:text="@string/suggset_commit_btn"
        android:textColor="@android:color/white" />

</LinearLayout>
