<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/forward_qzone_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/forward_qzone_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:background="@drawable/transmit_icon_share_qzone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forward_qzone_iv"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/forward_dialog_text_size"
                android:text="@string/forward_qzone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/forward_qq_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/forward_qq_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:background="@drawable/transmit_icon_share_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forward_qq_iv"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/forward_dialog_text_size"
                android:text="@string/forward_qq" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="@dimen/forward_dialog_text_size"
        android:layout_gravity="center_horizontal"
        android:text="@string/forward_getmoney"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"
        android:text="@string/forward_cancel"/>

</LinearLayout>
